# cmlextensions

./: .gitignore  README.md  setup.cfg
src/cmlextensions/dask_cluster/: __init__.py  dask_cluster.py
src/cmlextensions/ray_cluster/: __init__.py  ray_cluster.py
src/cmlextensions/workers_v2/: workers.py
src/cmlextras/dask_cluster/: dask_cluster.py
src/cmlextras/ray_cluster/: __init__.py  ray_cluster.py
src/cmlextras/workers_v2/: __init__.py  workers.py
test/: test_dask.py  test_ray.py  test_workers.py
