[metadata]
name = cmlextras
version = 0.1
description = extra functionality to the cml library
long_description = file: README.md
long_description_content_type = text/markdown
author = peter.ableda
author_email = peter.ableda@gmail.com

[options]
package_dir = =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src